@startuml
class File {
    - String name

    + File(String name)
    + String getName()
    + void setName(String name)
    + String toString()
}

class Folder {
    - String name
    - ArrayList<Folder> subfolders
    - ArrayList<File> files

    + Folder()
    + String getName()
    + void setName(String name)
    + void removeSubfolder(String subFolderName)
    + void addSubfolder(String subFolderName)
    + Folder getSubfolder(String subFolderName)
    + boolean removeFile(File file)
    + void addFile(String fileName)
    + String toString()
    + void printFolderContents()
}

Folder "1" *-- "0..*" Folder : contains
Folder "1" *-- "0..*" File : contains
@enduml
